<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:id="@+id/titleLabelTextView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleEditText"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:id="@+id/descriptionLabelTextView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptionEditText"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/dueDate"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:id="@+id/dueDateLabelTextView" />

        <ImageButton
            android:id="@+id/datePickerButton"
            android:src="@drawable/ic_date_picker"
            android:background="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text=""
            android:id="@+id/dueDateTextView" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/reminder"
            android:id="@+id/reminderCheckBox" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textStyle="bold"
            android:id="@+id/statusLabelTextView" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:entries="@array/status"
            android:id="@+id/statusSpinner" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textStyle="bold"
            android:id="@+id/categoryLabelTextView" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:entries="@array/categories"
            android:id="@+id/categorySpinner" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:textStyle="bold"
            android:id="@+id/priorityLabelTextView" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:entries="@array/priorities"
            android:id="@+id/prioritySpinner" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:text="@string/cancel"
            android:id="@+id/cancelButton" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/saveButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>
